# franny

./: .gitignore  CMakeLists.txt
app/hello_triangle/: hello_triangle.cpp
app/opengl_tutorial/hello_triangle/: CMakeLists.txt  hello_triangle.cpp  run.cpp
app/opengl_tutorial/shaders/: CMakeLists.txt  run.cpp  shader.fs  shader.vs  shaders.cpp
app/opengl_tutorial/textures/: CMakeLists.txt  run.cpp  shader.fs
app/opengl_tutorial/transformations/: CMakeLists.txt  run.cpp
app/platformer/: CMakeLists.txt  platformer.cpp
app/rasterize/: CMakeLists.txt  rasterize.cpp
include/doctest/: doctest.h
include/engine/: engine.h
include/entity/: entity.h  level.h  platform.h
include/franny/engine/: engine.h
include/franny/entity/: entity.h  level.h  platform.h
include/franny/geo/: line2.h  matrix.h  point2.h  vec2.h  vec3.h  vec4.h
include/franny/render/: shader.h  texture.h
include/franny/utility/: entity.h  key.h  math.h  parse.h  string.h
include/geo/: line2.h  math.h  matrix.h  point2.h  vec2.h  vec3.h  vec4.h
include/glad/: glad.h
include/nlohmann/: json.hpp
include/render/: shader.h  texture.h
include/utility/: entity.h  gl.h  key.h  math.h  parse.h  string.h
lib/glfw-3.4/docs/: CMakeLists.txt
lib/glfw-3.4/docs/html/search/: all_19.js  all_1d.js  all_7.js  all_9.js  all_d.js  search.js
lib/glfw-3.4/examples/: heightmap.c  offscreen.c  particles.c  sharing.c  splitview.c  triangle-opengl.c  triangle-opengles.c  windows.c
lib/glfw-3.4/include/GLFW/: glfw3.h  glfw3native.h
lib/glfw-3.4/src/: cocoa_init.m  cocoa_joystick.h  cocoa_joystick.m  cocoa_monitor.m  cocoa_platform.h  cocoa_time.c  cocoa_time.h  cocoa_window.m  context.c  egl_context.c  glx_context.c  init.c  input.c  internal.h  linux_joystick.c  linux_joystick.h  mappings.h  monitor.c  nsgl_context.m  null_init.c  null_joystick.c  null_joystick.h  null_monitor.c  null_platform.h  null_window.c  osmesa_context.c  platform.c  platform.h  posix_module.c  posix_poll.c  posix_poll.h  posix_thread.c  posix_thread.h  posix_time.c  posix_time.h  vulkan.c  wgl_context.c  win32_init.c  win32_joystick.c  win32_joystick.h  (+19 more)
lib/glfw-3.4/tests/: allocator.c  clipboard.c  cursor.c  empty.c  events.c  gamma.c  glfwinfo.c  icon.c  iconify.c  inputlag.c  joysticks.c  monitors.c  msaa.c  reopen.c  tearing.c  threads.c  timeout.c  title.c  window.c
src/: CMakeLists.txt  glad.c  main.cpp
src/engine/: Engine.cpp  Engine.hpp  engine.cpp
src/entity/: Entity.hpp  Level.cpp  Level.hpp  Platform.cpp  Platform.hpp  level.cpp  platform.cpp
src/geo/: line2.cpp  matrix.cpp  point2.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/level/: Level.cpp  Level.hpp
src/render/: shader.cpp  texture.cpp
src/utility/: entity.hpp  key.cpp
test/: CMakeLists.txt
test/source/geo/: matrix.cpp
test/src/: main.cpp
test/src/geo/: line2.cpp  matrix.cpp  point2.cpp  vec2.cpp
tmp/: test.json
